--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -67,9 +67,6 @@ main {
         font-style: italic;
       }
 
-      .button {
-        width: fit-content;
-      }
     }
   }
 }
