--- a/scss/responsive/_mobile-800.scss
+++ b/scss/responsive/_mobile-800.scss
@@ -1,7 +1,7 @@
 @media (max-width: 800px) {
   /*GENERAL*/
   h2 {
-    margin: 1em !important;
+    margin: 1em 1em 0 0.5em !important;
   }
 
 
